2023-08-11T16:08:01Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5834677863 # 1808
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-11
* notice: last 14d: unq all: 13 91
* notice: prev accum: outdated-unq outdated-all / unq all: 333 1379 / 343 1461
* notice: next accum: outdated-unq outdated-all / unq all: 333 1379 / 346 1470
* notice: prev exec diff / last date diff / accum: unq all: +3 +9 -0 -0 / +3 +9 -0 -0 / 3 9
* notice: removed / changed dates: [] / [2023-08-11]

2023-08-10T08:09:28Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5818581276 # 1804
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-10
* notice: last 14d: unq all: 10 82
* notice: prev accum: outdated-unq outdated-all / unq all: 332 1377 / 343 1461
* notice: next accum: outdated-unq outdated-all / unq all: 333 1379 / 343 1461
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-07-27] / []

2023-08-09T16:10:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5811467006 # 1802
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-09
* notice: last 14d: unq all: 11 84
* notice: prev accum: outdated-unq outdated-all / unq all: 330 1373 / 342 1443
* notice: next accum: outdated-unq outdated-all / unq all: 332 1377 / 343 1461
* notice: prev exec diff / last date diff / accum: unq all: +1 +18 -0 -0 / +1 +18 -0 -0 / 1 18
* notice: removed / changed dates: [2023-07-26] / [2023-08-09]

2023-08-08T16:08:38Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5799328822 # 1799