@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-11T16:08:01Z",
-  "count_outdated" : 1379,
-  "uniques_outdated" : 333,
+  "timestamp" : "2023-08-12T16:07:06Z",
+  "count_outdated" : 1387,
+  "uniques_outdated" : 335,
   "count" : 1470,
   "uniques" : 346,
   "views" : [
-    {
-      "timestamp": "2023-07-29T00:00:00Z",
-      "count": 8,
-      "count_minmax": [ 6, 8 ],
-      "count_decinc": [ 0, 8 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2023-08-01T00:00:00Z",
       "count": 11,
