@@ -1,3 +1,12 @@
+2023-08-12T16:07:06Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5842258759 # 1811
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-12
+* notice: last 14d: unq all: 11 83
+* notice: prev accum: outdated-unq outdated-all / unq all: 333 1379 / 346 1470
+* notice: next accum: outdated-unq outdated-all / unq all: 335 1387 / 346 1470
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-07-29] / []
+
 2023-08-11T16:08:01Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5834677863 # 1808
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-11
